@@ -1,10 +1,13 @@
 GenericSetup Product Changelog
 
   GenericSetup 1.3.3 (unreleased)
-  
+
     - Be more careful in checking context id validity.
 
     - Fire events before and after importing.
+
+    - tool: Fixed toolset import handler not to initialize tools again, when
+      they already exist in the site.
 
 
   GenericSetup 1.3.2 (2007/09/11)
